[build-system]
requires = ["setuptools>=42.0.0,<78.0.0", "wheel", "setuptools_scm"] # upper bound for setuptools until https://github.com/soft-matter/pims/pull/463 is released
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "src/multiview_stitcher/_version.py"

[tool.black]
line-length = 79
target-version = ['py39', 'py310', 'py311']


[tool.ruff]
line-length = 79
select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long. let black handle this
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
    "src/multiview_stitcher/_tests/quickstart",
]

target-version = "py39"
fix = true

[tool.pytest.ini_options]

markers = [ # https://docs.pytest.org/en/stable/how-to/mark.html
    "private_data: marks tests as requiring private data (deselect with '-m \"not private_data\"')",
]
