[metadata]
name = multiview-stitcher

description = A toolbox for rthe registration and fusion of chunked 2-3D image datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/multiview-stitcher/multiview-stitcher
author = Marvin Albert
author_email = marvin.albert@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/multiview-stitcher/multiview-stitcher/issues
    Documentation = https://github.com/multiview-stitcher/multiview-stitcher#README.md
    Source Code = https://github.com/multiview-stitcher/multiview-stitcher
    User Support = https://github.com/multiview-stitcher/multiview-stitcher/issues

[options]
packages = find:
install_requires =
    numpy
    dask_image
    zarr
    xarray
    tifffile>=2022.7.28
    aicsimageio
    aicspylibczi
    networkx
    tqdm
    Geometry3D @ git+https://github.com/GouMinghao/Geometry3D@0.3.0 # pure python library
    jupyter
    ipympl
    spatial_image==0.3.0
    multiscale_spatial_image==0.11.2
    matplotlib
    ngff-zarr==0.4.7

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    nbmake # notebook testing


[options.package_data]
* = *.yaml, test-datasets/*
