[metadata]
name = multiview-stitcher

description = Registration and fusion of large imaging datasets in 2D and 3D.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/multiview-stitcher/multiview-stitcher
project_urls =
    Bug Tracker = https://github.com/multiview-stitcher/multiview-stitcher/issues
    Documentation = https://multiview-stitcher.github.io/multiview-stitcher/
    Source Code = https://github.com/multiview-stitcher/multiview-stitcher
    User Support = https://github.com/multiview-stitcher/multiview-stitcher/issues

author = Marvin Albert
author_email = marvin.albert@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
install_requires =
    numpy >=1.18
    dask[array, dataframe]
    dask_image
    zarr
    xarray >=2024.10.0
    tifffile >=2022.7.28, <= 2025.5.10
    networkx
    tqdm
    matplotlib
    scikit-image >=0.21.0
    spatial_image ==1.2.3
    multiscale_spatial_image ==2.0.3
    ngff-zarr >=0.12.2
    ome-zarr >=0.10.2
    scipy >=1.11.4, <=1.15.3 # upper limit due to https://github.com/ANTsX/ANTsPy/issues/824


python_requires = >=3.10
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
# Using %(target)s below to build hierarchical dependencies
# https://github.com/pypa/setuptools/issues/1260#issuecomment-438187625
ants =
    antspyx >=0.4.2
aicsimageio =
    aicsimageio ==4.14.0
    aicspylibczi
    xsdata ==24.1 # https://github.com/tlambert03/ome-types/issues/242
czi =
    czifile ==2019.7.2.1
    imagecodecs >=2023.7.10
test_deps =
    tox
    jupyter
    pytest <8.0.0  # https://github.com/pytest-dev/pytest/issues/11779
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-benchmark >5
    nbmake # notebook testing
dev_deps =
    pre-commit
testing =
    %(test_deps)s
    %(ants)s
    %(czi)s
dev =
    %(testing)s
    %(dev_deps)s
all =
    %(ants)s
    %(aicsimageio)s
    %(czi)s

[options.package_data]
* = *.yaml, test-datasets/*
